<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/appinfo_head_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:fontFamily="@font/gotham_rnd_bold"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:gravity="center_horizontal"
                android:text="@string/cs_tagline"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:contentDescription="@string/cs_logo_image_desc"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/icon_cs_logo" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:gravity="center_horizontal"
                android:text="@string/largest_real_estate_aggregator"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appinfo_head_section">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:paddingTop="15sp"
                android:paddingStart="15sp"
                android:paddingEnd="15sp"
                android:textSize="16sp"
                android:text="@string/exclusive_projects"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:paddingTop="10sp"
                android:paddingStart="15sp"
                android:paddingEnd="15sp"
                android:textSize="16sp"
                android:text="@string/best_comission_slabs_by_promoter"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:paddingTop="10sp"
                android:paddingStart="15sp"
                android:paddingEnd="15sp"
                android:textSize="16sp"
                android:text="@string/get_free_verified_buyer_leads"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:paddingTop="10sp"
                android:paddingStart="15sp"
                android:paddingEnd="15sp"
                android:textSize="16sp"
                android:text="@string/clear_payout_process"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:paddingTop="10sp"
                android:paddingStart="15sp"
                android:paddingEnd="15sp"
                android:paddingBottom="15sp"
                android:textSize="16sp"
                android:text="@string/instant_rm_connect" />

        </LinearLayout>



    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/appinfo_cs_connect_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cs_connect_button_text"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:background="@color/colorButton"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/become_our_channel_partner_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/become_our_channel_partner_text"
        app:layout_constraintBottom_toTopOf="@+id/appinfo_cs_connect_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>