<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/left_side_bar_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/left_side_bar_icon"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/gotham_rnd_bold"
                android:text="Terms &amp; Condition"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20dp" />


        </RelativeLayout>
    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="8sp"
                android:textStyle="bold"
                android:text="Definitions" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="8sp"
                android:text="@string/definations" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="8sp"
                android:textStyle="bold"
                android:text="Enrolment &amp; Usage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="8sp"
                android:text="@string/enrollment_usage" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="10sp"
                android:textStyle="bold"
                android:layout_marginRight="8sp"
                android:text="Termination of Membership" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="8sp"
                android:layout_marginBottom="8sp"
                android:text="@string/termination_of_membership" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="10sp"
                android:textStyle="bold"
                android:layout_marginRight="8sp"
                android:text="Intellectual Property Rights: Service Content, Software and Trademarks" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="8sp"
                android:text="@string/intellectual_property" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="10sp"
                android:textStyle="bold"
                android:layout_marginRight="8sp"
                android:text="Miscellaneous" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="8sp"
                android:text="@string/miscellaneous" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="10sp"
                android:textStyle="bold"
                android:layout_marginRight="8sp"
                android:text="Disclaimer of Warranties" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="8sp"
                android:text="@string/disclaimer_of_warranties" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="10sp"
                android:textStyle="bold"
                android:layout_marginRight="8sp"
                android:text="Limitation of Liability" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="8sp"
                android:text="@string/limitation_of_liability" />


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>