<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_generateotp_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/generate_otp_head_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:fontFamily="@font/gotham_rnd_bold"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:gravity="center_horizontal"
                android:text="@string/cs_tagline"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/cs_logo_image_desc"
                android:src="@drawable/icon_cs_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:gravity="center_horizontal"
                android:text="@string/largest_real_estate_aggregator"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:paddingStart="10sp"
        android:paddingTop="15sp"
        android:paddingEnd="10sp"
        android:text="@string/login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generate_otp_head_section" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <Spinner
            android:id="@+id/generate_otp_countryCode_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <EditText
            android:id="@+id/generate_otp_phoneNumber_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_weight="1"
            android:hint="@string/phone_number"
            android:inputType="phone"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/checkbox_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <CheckBox
            android:id="@+id/termCondition_Checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:clickable="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/gotham_rnd_book"
            android:text="I agree to " />

        <TextView
            android:id="@+id/termCondition_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_color"
            android:text="Terms &amp; Conditions"
            android:clickable="true"
            android:fontFamily="@font/gotham_rnd_book"
            android:layout_weight="0.6"
            android:hint="@string/phone_number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkbox_layout"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="45sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/get_otp_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <CheckBox
          android:id="@+id/privacy_policy_chechBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:clickable="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/gotham_rnd_book"
            android:text="I agree to " />

        <TextView
            android:id="@+id/privacy_policy_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_color"
            android:clickable="true"
            android:text="Privacy Policy"
            android:fontFamily="@font/gotham_rnd_book"
            android:layout_weight="0.6"
            android:hint="@string/phone_number"/>

    </LinearLayout>

    <Button
        android:id="@+id/get_otp_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorButton"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:text="@string/get_otp_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_black"
        android:elevation="2dp"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.Material.ProgressBar"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/progress_bar_layout"
            app:layout_constraintEnd_toEndOf="@id/progress_bar_layout"
            app:layout_constraintStart_toStartOf="@id/progress_bar_layout"
            app:layout_constraintTop_toTopOf="@id/progress_bar_layout" />

        <TextView
            android:id="@+id/progress_bar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@id/progress_bar_layout"
            app:layout_constraintStart_toStartOf="@id/progress_bar_layout"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>